--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="d-flex w-100">
-                <div style="width: 18%; background-color: white; height: auto;">
-                    
-                        <img src="./img/image001 1.png" style="width: 45%; margin-left: 20%; margin-top: 28px;" />
+                <div style="width: 15.278%; background-color: white; height: auto;">
+                    <nav>
+                        <img src="./img/image001 1.png" class="img-fluid" style="width: 45%; margin-left: 20%; margin-top: 28px;" />
                         <ul id="tabsJustified" class="nav nav-pills flex-column">
                             <li class="nav-item">
                                 <a href="" id="dashboard-link" data-toggle="tab" class="nav-link d-flex cat active">
@@ -70,10 +70,10 @@
                                 </a>
                             </li>
                         </ul>
-                    
+                    </nav>
                 </div>
 
-                <div class="tab-content" style="width: 82%; height: 100%;">
+                <div class="tab-content" style="width: 84.722%; height: 100%;">
                     <div id="dashboard" style="padding: 2.623%;">
                         <nav>
                             <nav class="navbar p-0">
@@ -163,8 +163,8 @@
                                         <div class="fs-13" style="border: 1px solid #D1D1D1; box-sizing: border-box; border-radius: 4px; width: 95px; height: 33px; display: inline-flex; justify-content: center; align-items: center;">See more</div>
                                     </nav>
                                     <nav class="navbar pl-2 pr-2 p-0">
-                                        <div style="width: 100%; overflow-y: scroll;" id="style-2">
-                                            <table class="table tbl-even" style="min-width: 360px; max-height: 350px; height: 100%;">
+                                        <div style="width: 100%;">
+                                            <table class="table tbl-even" style="min-width: 360px; height: 100%;">
                                                 <thead>
                                                     <tr class="fs-14 tc-grey fw-400">
                                                         <td>ID</td>
@@ -219,8 +219,8 @@
                                         <div class="fs-13" style="border: 1px solid #D1D1D1; box-sizing: border-box; border-radius: 4px; width: 95px; height: 33px; display: inline-flex; justify-content: center; align-items: center;">See more</div>
                                     </nav>
                                     <nav class="navbar pl-2 pr-2 p-0">
-                                        <div style="width: 100%; overflow-y: scroll;" id="style-2">
-                                            <table class="table tbl-even" style="max-height: 350px; height: 100%;">
+                                        <div style="width: 100%;">
+                                            <table class="table tbl-even" style="height: 100%;">
                                                 <thead>
                                                     <tr class="fs-14 tc-grey fw-400">
                                                         <td>ID</td>
