--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="d-flex w-100">
-                <div style="width: 15.278%; background-color: white; height: auto;">
+                <div style="width: 15.278%; background-color: white; height: auto; min-width: 180px;">
                     <nav>
                         <img src="./img/image001 1.png" class="img-fluid" style="width: 45%; margin-left: 20%; margin-top: 28px;" />
                         <ul id="tabsJustified" class="nav nav-pills flex-column">
