--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-
+      
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -178,34 +182,34 @@
                                                 <tbody>
                                                     <tr class="fw-400">
                                                         <td class="fs-13 align-middle">121547987</td>
-                                                        <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #B4F32E; padding: 7px; width: 67px;">Ongoing</div></td>
+                                                        <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #B4F32E; padding: 7px; width: 67px; height: 26px;">Ongoing</div></td>
                                                         <td class="fs-13 align-middle">Z01</td>
                                                         <td class="fs-13 align-middle">Site 01</td>
-                                                        <td class="align-middle"><div class="fs-10 text-center" style="border: 1.25px solid #615EFF; width: 67px; color: #615EFF; box-sizing: border-box; border-radius: 5px; padding: 7px;">Afficher</div></td>
+                                                        <td class="align-middle"><div class="fs-10 text-center" style="border: 1.25px solid #615EFF; width: 67px; height: 26px; color: #615EFF; box-sizing: border-box; border-radius: 5px; padding: 7px;">Afficher</div></td>
                                                         <td><img src="./img/dashboard/Frame 70.png" /></td>
                                                     </tr>
                                                     <tr class="fw-400">
                                                         <td class="fs-13 align-middle">324856741</td>
-                                                        <td class="align-middle text-center"><div class="fs-10 text-center" style="border-radius: 10px; background: #FCF319; padding: 7px; width: 67px;">Pending</div></td>
+                                                        <td class="align-middle text-center"><div class="fs-10 text-center" style="border-radius: 10px; background: #FCF319; padding: 7px; width: 67px; height: 26px;">Pending</div></td>
                                                         <td class="fs-13 align-middle">Z01</td>
                                                         <td class="fs-13 align-middle">Site 01</td>
-                                                        <td class="align-middle"><div class="fs-10 text-center" style="border: 1.25px solid #615EFF; width: 67px; color: #615EFF; box-sizing: border-box; border-radius: 5px; padding: 7px;">Afficher</div></td>
+                                                        <td class="align-middle"><div class="fs-10 text-center" style="border: 1.25px solid #615EFF; width: 67px; height: 26px; color: #615EFF; box-sizing: border-box; border-radius: 5px; padding: 7px;">Afficher</div></td>
                                                         <td><img src="./img/dashboard/Frame 70.png" /></td>
                                                     </tr>
                                                     <tr class="fw-400">
                                                         <td class="fs-13 align-middle">658745179</td>
-                                                        <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #B4F32E; padding: 7px; width: 67px;">Ongoing</div></td>
+                                                        <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #B4F32E; padding: 7px; width: 67px; height: 26px;">Ongoing</div></td>
                                                         <td class="fs-13 align-middle">Z01</td>
                                                         <td class="fs-13 align-middle">Site 01</td>
-                                                        <td class="align-middle"><div class="fs-10 text-center" style="border: 1.25px solid #615EFF; width: 67px; color: #615EFF; box-sizing: border-box; border-radius: 5px; padding: 7px;">Afficher</div></td>
+                                                        <td class="align-middle"><div class="fs-10 text-center" style="border: 1.25px solid #615EFF; width: 67px; height: 26px; color: #615EFF; box-sizing: border-box; border-radius: 5px; padding: 7px;">Afficher</div></td>
                                                         <td><img src="./img/dashboard/Frame 70.png" /></td>
                                                     </tr>
                                                     <tr class="fw-400">
                                                         <td class="fs-13 align-middle">340514785</td>
-                                                        <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #EF3C3C; color: white; padding: 7px; width: 67px;">Close</div></td>
+                                                        <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #EF3C3C; color: white; padding: 7px; width: 67px; height: 26px;">Close</div></td>
                                                         <td class="fs-13 align-middle">Z01</td>
                                                         <td class="fs-13 align-middle">Site 01</td>
-                                                        <td class="align-middle"><div class="fs-10 text-center" style="border: 1.25px solid #615EFF; width: 67px; color: #615EFF; box-sizing: border-box; border-radius: 5px; padding: 7px;">Afficher</div></td>
+                                                        <td class="align-middle"><div class="fs-10 text-center" style="border: 1.25px solid #615EFF; width: 67px; height: 26px; color: #615EFF; box-sizing: border-box; border-radius: 5px; padding: 7px;">Afficher</div></td>
                                                         <td><img src="./img/dashboard/Frame 70.png" /></td>
                                                     </tr>
                                                 </tbody>
