--- a/48.html
+++ b/48.html
@@ -66,7 +66,7 @@
                                 </div>
                                 <div class="col-sm-9 p-0 fs-12 fw-500" style="min-width: 145px;">02- Identification des dangers</div>
                             </div>
-                            <div class="w-100" style="padding-left: 9%; padding-right: 9%;" id="Mesure-de-Protection-link">
+                            <div class="w-100 Mesure-de-Protection-link" style="padding-left: 9%; padding-right: 9%;" id="Mesure-de-Protection-link">
                                 <div class="col-sm-1 p-0 pr-1" style="justify-content: center; min-width:22px;"><input class="checkbox" type="checkbox"></div>
                                 <div class="col-sm-2 p-0 pr-2" style="justify-content: center;">
                                     <img src="./img/48/Folder.png" class="blue-img" style="width: 19.2px; height: 19.17px; display: none;" />
@@ -465,7 +465,6 @@
                                     <textarea rows="4" id="style-2" class="w-100 fs-15" style="line-height: 160.9% !important; margin-top: 10px; padding-right: 13%; padding-left: 23px; padding-top: 11px; padding-bottom: 11px; color: #14142B; height: 206px; border: 1.5px solid #D1D1D1; box-sizing: border-box; border-radius: 10px; outline: none;">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte.</textarea>
                                 </div>
                             </div>
-
                         </div>
                         <div class="w-100" style="margin-top: 21px;">
                             <button class="fs-17 form-control float-right" style="width: 28.747%; height: 61px; box-shadow: 0px 4px 29px rgba(97, 94, 255, 0.17); background: #615EFF; border-radius: 9px; color: #FFFFFF; outline: none;">
@@ -474,11 +473,107 @@
                         </div>
                     </div>
                     
-                    <div class="w-100" id="Consignation-des-énergies">
-                        <div class="row m-0">
+                    <div class="w-100" id="Mesure-de-Protection">
+                        <div class="w-100" id="Consignation-des-énergies">
+                            <div class="row m-0 bg-white fs-16" style="margin-bottom: 23px !important; margin-right: 22px !important; padding-left: 27px; padding-top: 16px; padding-bottom: 16px; color: #200E32; border-radius: 10px;">
+                                3-1  Consignation des énergies
+                            </div>
+                            <div class="row m-0">
 
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-bottom: 32px !important; margin-top: 2px !important; height: auto;">
+                                    <div class="text-center bg-white" style="width: 90%; border-radius: 10px; padding: 14px; height: 100%;">
+                                        <input class="checkbox checkbox-18 float-left" type="checkbox" value="">
+                                        <br />
+                                        <div style="height: 80%; width: 100%;">
+                                            <img src="./img/48/Vector.png" class="img-fluid" style="margin-top: 5%;" width="60%">
+                                            <div class="fs-14" style="color: #200E32; margin-top: 11.165%;">01. Dépressuriser</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-bottom: 32px !important; margin-top: 2px !important; height: auto;">
+                                    <div class="text-center bg-white" style="width: 90%; border-radius: 10px; padding: 14px; height: 100%;">
+                                        <input class="checkbox checkbox-18 float-left" type="checkbox" value="">
+                                        <br />
+                                        <div style="height: 80%; width: 100%;">
+                                            <img src="./img/48/Vector.png" class="img-fluid" style="margin-top: 5%;" width="60%">
+                                            <div class="fs-14" style="color: #200E32; margin-top: 11.165%;">02. Dégazer</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-bottom: 32px !important; margin-top: 2px !important; height: auto;">
+                                    <div class="text-center bg-white" style="width: 90%; border-radius: 10px; padding: 14px; height: 100%;">
+                                        <input class="checkbox checkbox-18 float-left" type="checkbox" value="">
+                                        <br />
+                                        <div style="height: 80%; width: 100%;">
+                                            <img src="./img/48/Vector.png" class="img-fluid" style="margin-top: 5%;" width="60%">
+                                            <div class="fs-14" style="color: #200E32; margin-top: 11.165%;">03. Vider des produits dans les conduites et appareils</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-bottom: 32px !important; margin-top: 2px !important; height: auto;">
+                                    <div class="text-center bg-white" style="width: 90%; border-radius: 10px; padding: 14px; height: 100%;">
+                                        <input class="checkbox checkbox-18 float-left" type="checkbox" value="">
+                                        <br />
+                                        <div style="height: 80%; width: 100%;">
+                                            <img src="./img/48/Vector.png" class="img-fluid" style="margin-top: 5%;" width="60%">
+                                            <div class="fs-14" style="color: #200E32; margin-top: 11.165%;">04. Rincer à l’eau – vapeur – azote – air – autre</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-bottom: 32px !important; margin-top: 2px !important; height: auto;">
+                                    <div class="text-center bg-white" style="width: 90%; border-radius: 10px; padding: 14px; height: 100%;">
+                                        <input class="checkbox checkbox-18 float-left" type="checkbox" value="">
+                                        <br />
+                                        <div style="height: 80%; width: 100%;">
+                                            <img src="./img/48/Vector.png" class="img-fluid" style="margin-top: 5%;" width="60%">
+                                            <div class="fs-14" style="color: #200E32; margin-top: 11.165%;">01. Dépressuriser</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-bottom: 32px !important; margin-top: 2px !important; height: auto;">
+                                    <div class="text-center bg-white" style="width: 90%; border-radius: 10px; padding: 14px; height: 100%;">
+                                        <input class="checkbox checkbox-18 float-left" type="checkbox" value="">
+                                        <br />
+                                        <div style="height: 80%; width: 100%;">
+                                            <img src="./img/48/Vector.png" class="img-fluid" style="margin-top: 5%;" width="60%">
+                                            <div class="fs-14" style="color: #200E32; margin-top: 11.165%;">03. Vider des produits dans les conduites et appareils</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-bottom: 32px !important; margin-top: 2px !important; height: auto;">
+                                    <div class="text-center bg-white" style="width: 90%; border-radius: 10px; padding: 14px; height: 100%;">
+                                        <input class="checkbox checkbox-18 float-left" type="checkbox" value="">
+                                        <br />
+                                        <div style="height: 80%; width: 100%;">
+                                            <img src="./img/48/Vector.png" class="img-fluid" style="margin-top: 5%;" width="60%">
+                                            <div class="fs-14" style="color: #200E32; margin-top: 11.165%;">01. Dépressuriser</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-bottom: 32px !important; margin-top: 2px !important; height: auto;">
+                                    <div class="text-center bg-white" style="width: 90%; border-radius: 10px; padding: 14px; height: 100%;">
+                                        <input class="checkbox checkbox-18 float-left" type="checkbox" value="">
+                                        <br />
+                                        <div style="height: 80%; width: 100%;">
+                                            <img src="./img/48/Vector.png" class="img-fluid" style="margin-top: 5%;" width="60%">
+                                            <div class="fs-14" style="color: #200E32; margin-top: 11.165%;">01. Dépressuriser</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            
+                            <div class="w-100" style="margin-top: 21px;">
+                                <button class="fs-17 form-control float-right" style="width: 28.747%; height: 61px; box-shadow: 0px 4px 29px rgba(97, 94, 255, 0.17); background: #615EFF; border-radius: 9px; color: #FFFFFF; outline: none;">
+                                    Suivant
+                                </button>
+                            </div>
                         </div>
                     </div>
+
+
+
+
                 </div>
             </div>
         </div>
@@ -498,6 +593,7 @@
 
             $("#Informations-générales").hide();
             $("#Mesure-de-Protection").hide();
+            $("#Levage-de-charges").hide();
             $("#Mesure-de-Protection-sublinks").hide();
             $("#Identification-des-dangers").show();
             $("#Informations-générales-link").click(function(){
@@ -520,6 +616,14 @@
                 $("#qr-code").hide();
                 $("#Mesure-de-Protection").show(200);
                 $("#Mesure-de-Protection-sublinks").show(200);
+            });
+            $("#Consignation-des-énergies-link").click(function(){
+                $("#Levage-de-charges").hide();
+                $("#Consignation-des-énergies").show(200);
+            });
+            $("#Levage-de-charges-link").click(function(){
+                $("#Consignation-des-énergies").hide();
+                $("#Levage-de-charges").show(200);
             });
         });
     </script>
