--- a/44.html
+++ b/44.html
@@ -69,7 +69,7 @@
                     <img class="ml-2 mr-auto" src="./img/43/Arrow - Left Square.png" style="width: 21px; height: 21px;" />
                     <img class="ml-2 mr-auto" src="./img/43/Arrow - Right Square.png" style="width: 21px; height: 21px;" />
                 </div>
-                <div class="ml-auto dropdown" style="margin-right: 28px;">
+                <div class="ml-auto dropdown mr-28">
                     <img src="./img/43/Filter 2.png" class="dropdown-toggle" data-toggle="dropdown" />
                     <ul class="dropdown-menu ddm-3 mx-auto">
                         <img src="./img/44/Polygon 1.png" width="14" height="14" />
@@ -160,11 +160,11 @@
                         </div>
                     </ul>
                 </div>
-                <img src="./img/43/Search.png" style="margin-right: 29px;" />
-                <div class="position-relative" style="margin-right: 28px;">
+                <img src="./img/43/Search.png" class="mr-28" />
+                <div class="position-relative mr-28" style="display: flex;">
                     <input type="file" style="opacity: 0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height:100%;" />
                     <img class="float-left" src="./img/44/Vector.png" style="height: 100%; margin-right: 12px;" />
-                    <div class="float-left align-middle" style="font-size: 13px;">
+                    <div class="float-left align-middle fs-13 my-auto">
                         Import csv file
                     </div>
                 </div>
@@ -285,9 +285,9 @@
                         <tr>
                             <td><input class="checkbox" type="checkbox"></td>
                             <td class="fs-12 fw-400">245178451</td>
-                            <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #EF3C3C; padding: 7px; width: 67px; height: 26px;"><p style="color: white;" class="my-auto">Close</p></div></td>
+                            <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #EF3C3C; padding: 7px; width: 67px; height: 26px; display: flex;"><p style="color: white;" class="my-auto mx-auto">Close</p></div></td>
                             <td class="align-middle"><img src="./img/44/Mask Group.png" style="width: 62px; height: 22px;" /></td>
-                            <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #008CFF; padding: 7px; width: 67px; height: 26px;"><p style="color: white;" class="my-auto">One shot</p></div></td>
+                            <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #008CFF; padding: 7px; width: 67px; height: 26px; display: flex;"><p style="color: white;" class="my-auto mx-auto">One shot</p></div></td>
                             <td scope="row">
                                 <div class="navbar p-0" style="width: 130px; min-width: 100px;">
                                     <div>
@@ -312,7 +312,7 @@
                                     </div>
                                 </div>
                             </td>
-                            <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #615EFF; color: white; padding: 7px; width: 67px; height: 26px; cursor:pointer;" data-toggle="modal" data-target="#myModal1">Afficher</div></td>
+                            <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #615EFF; padding: 7px; width: 67px; height: 26px; cursor:pointer; display: flex;" data-toggle="modal" data-target="#myModal1"><p class="mx-auto my-auto" style="color: white;">Afficher</p></div></td>
                             <td style="text-align: right !important;">
                                 <div class="d-flex">
                                     <div class="dropdown">
@@ -334,9 +334,9 @@
                         <tr>
                             <td><input class="checkbox" type="checkbox"></td>
                             <td class="fs-12 fw-400">245178451</td>
-                            <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #EF3C3C; color: white; padding: 7px; width: 67px; height: 26px;">Close</div></td>
+                            <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #EF3C3C; padding: 7px; width: 67px; height: 26px; display: flex;"><p style="color: white;" class="my-auto mx-auto">Close</p></div></td>
                             <td class="align-middle"><img src="./img/44/Mask Group.png" style="width: 62px; height: 22px;" /></td>
-                            <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #008CFF; color: white; padding: 7px; width: 67px; height: 26px;">One shot</div></td>
+                            <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #008CFF; padding: 7px; width: 67px; height: 26px; display: flex;"><p style="color: white;" class="my-auto mx-auto">One shot</p></div></td>
                             <td scope="row">
                                 <div class="navbar p-0" style="width: 130px; min-width: 100px;">
                                     <div>
@@ -361,7 +361,7 @@
                                     </div>
                                 </div>
                             </td>
-                            <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #615EFF; color: white; padding: 7px; width: 67px; height: 26px; cursor:pointer;" data-toggle="modal" data-target="#myModal1">Afficher</div></td>
+                            <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #615EFF; color: white; padding: 7px; width: 67px; height: 26px; cursor: pointer; display: flex;" data-toggle="modal" data-target="#myModal1"><p class="mx-auto my-auto" style="color: white;">Afficher</p></div></td>
                             <td style="text-align: right !important;">
                                 <div class="d-flex">
                                     <div class="dropdown position-relative">
