--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -24,13 +24,15 @@
             <div class="d-flex w-100">
                 <div style="width: 15.278%; background-color: white; height: auto; min-width: 180px;">
                     <nav>
-                        <img src="./img/image001 1.png" class="img-fluid" style="width: 45%; margin-left: 20%; margin-top: 28px;" />
+                        <div style="width: 45%; margin-left: 20%; margin-top: 28px;">
+                            <img src="./img/image001 1.png" class="img-fluid" />
+                        </div>
                         <ul id="tabsJustified" class="nav nav-pills flex-column">
                             <li class="nav-item">
                                 <a href="" id="dashboard-link" data-toggle="tab" class="nav-link d-flex cat active">
                                     <div style="min-width: 15%; margin-right: 5%;" class="text-center">
-                                        <img src="./img/Category.png" style="width: 18px; height: 18px; display: none;" class="white-image" />
-                                        <img src="./img/Category.png" style="width: 18px; height: 18px;" class="black-image" />
+                                        <img src="./img/Category.png" style="display: none;" class="white-image img-fluid" />
+                                        <img src="./img/Category.png" class="black-image img-fluid" />
                                     </div>
                                     <div style="min-width: 80%;" class="my-auto fs-17">
                                         Dashboard
@@ -41,8 +43,8 @@
                             <li class="nav-item">
                                 <a href="" id="permit-link" data-toggle="tab" class="nav-link d-flex cat">
                                     <div style="min-width: 15%; margin-right: 5%;" class="text-center">
-                                        <img src="./img/Paper.png" style="width: 16px; height: 18px;" class="black-image" />
-                                        <img src="./img/Paper (1).png" style="width: 16px; height: 18px; display: none;" class="white-image" />
+                                        <img src="./img/Paper.png" class="black-image img-fluid" />
+                                        <img src="./img/Paper (1).png" style="display: none;" class="white-image img-fluid" />
                                     </div>
                                     <div style="min-width: 80%;" class="my-auto fs-17">
                                         Permis de travail
@@ -53,8 +55,8 @@
                             <li class="nav-item">
                                 <a href="" id="observation-link" data-toggle="tab" class="nav-link d-flex cat">
                                     <div style="min-width: 15%; margin-right: 5%;" class="text-center">
-                                        <img src="./img/Group 716.png" style="width: 24.76px; height: 16px; display: none;" class="white-image" />
-                                        <img src="./img/Group 716.png" style="width: 24.76px; height: 16px;" class="black-image" />
+                                        <img src="./img/Group 716.png" style="display: none;" class="white-image img-fluid" />
+                                        <img src="./img/Group 716.png" class="black-image img-fluid" />
                                     </div>
                                     <div style="min-width: 80%;" class="my-auto fs-17">
                                         Observation
@@ -65,8 +67,8 @@
                             <li class="nav-item">
                                 <a href="" id="profile-link" data-toggle="tab" class="nav-link d-flex cat">
                                     <div style="min-width: 15%; margin-right: 5%;" class="text-center">
-                                        <img src="./img/Profile (1).png" style="width: 15px; height: 18px; display: none;" class="white-image" />
-                                        <img src="./img/Profile.png" style="width: 15px; height: 18px;" class="black-image" />
+                                        <img src="./img/Profile (1).png" style="display: none;" class="white-image" />
+                                        <img src="./img/Profile.png" class="black-image img-fluid" />
                                     </div>
                                     <div style="min-width: 80%;" class="my-auto fs-17">
                                         Profile
@@ -164,7 +166,7 @@
                                 <div style="width: 39.292%; margin-top: 29px !important; height: 100%; background-color: white; border-radius: 10px;" class="adjust-table">
                                     <nav class="navbar" style="padding:30px 21px;">
                                         <div class="fw-400 fs-16 my-auto" style="color: #200E32; min-width: 150px;">Permis de travail récents</div>
-                                        <div class="fs-13" style="border: 1px solid #D1D1D1; box-sizing: border-box; border-radius: 4px; width: 95px; height: 33px; display: inline-flex; justify-content: center; align-items: center;">See more</div>
+                                        <div class="fs-13 fw-400" style="border: 1px solid #D1D1D1; box-sizing: border-box; border-radius: 4px; width: 95px; height: 33px; display: inline-flex; justify-content: center; align-items: center;">See more</div>
                                     </nav>
                                     <nav class="navbar pl-2 pr-2 p-0">
                                         <div style="width: 100%;">
@@ -220,7 +222,7 @@
                                 <div style="width: 58.29%; margin-top: 29px !important; height: 100%; background-color: white; border-radius: 10px;" class="adjust-table">
                                     <nav class="navbar" style="padding:30px 21px;">
                                         <div class="fw-400 fs-16 my-auto" style="color: #200E32; min-width: 150px;">Récentes observation</div>
-                                        <div class="fs-13" style="border: 1px solid #D1D1D1; box-sizing: border-box; border-radius: 4px; width: 95px; height: 33px; display: inline-flex; justify-content: center; align-items: center;">See more</div>
+                                        <div class="fs-13 fw-400" style="border: 1px solid #D1D1D1; box-sizing: border-box; border-radius: 4px; width: 95px; height: 33px; display: inline-flex; justify-content: center; align-items: center;">See more</div>
                                     </nav>
                                     <nav class="navbar pl-2 pr-2 p-0">
                                         <div style="width: 100%;">
