--- a/43.html
+++ b/43.html
@@ -42,7 +42,7 @@
         </nav>
         <div class="w-100" style="padding-left: 3.056%; padding-right: 3.056%; padding-top: 31px;">
             <nav class="navbar p-0">
-                <div style="width: 229px; height: 54px; border-radius: 10px; color: #200E32;" class="bg-white">
+                <div class="date-range">
                     <div style="margin: 6.55%; margin-top: auto; margin-bottom: auto; height: 100%;" class="navbar p-0 fs-14 fw-400">Dec 11, 2021 <img src="./img/43/Arrow - Right.png" /> Jan 11, 2022</div>
                 </div>
                 <div class="mr-auto navbar p-0">
@@ -52,14 +52,104 @@
                     <img class="ml-2 mr-auto" src="./img/43/Arrow - Left Square.png" style="width: 21px; height: 21px;" />
                     <img class="ml-2 mr-auto" src="./img/43/Arrow - Right Square.png" style="width: 21px; height: 21px;" />
                 </div>
-                <img src="./img/43/Filter 2.png" class="ml-auto" style="margin-right: 28px;" />
-                <img src="./img/43/Search.png" style="margin-right: 25px;" />
-                <div style="width: 224px; height: 54px; background: #615EFF; border-radius: 9px;">
+                <div class="ml-auto dropdown mr-28">
+                    <img src="./img/43/Filter 2.png" class="dropdown-toggle" data-toggle="dropdown" />
+                    <ul class="dropdown-menu ddm-3 mx-auto">
+                        <img src="./img/44/Polygon 1.png" width="14" height="14" />
+                        <div class="small ml-2 mb-2">
+                            Filter par:
+                        </div>
+                        <div style="overflow-y: scroll; height: 167px; margin-right: 19px;" id="style-2" >
+                            <li class="small">
+                                <div class="form-check">
+                                    <input  class="checkbox align-middle" type="checkbox" value="" id="flexCheck1" checked>
+                                    <label for="flexCheck1">
+                                        ID
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="small">
+                                <div class="form-check">
+                                    <input class="checkbox align-middle" type="checkbox" value="" id="flexCheck2" checked>
+                                    <label for="flexCheck2">
+                                        STATUS
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="small">
+                                <div class="form-check">
+                                    <input class="checkbox align-middle" type="checkbox" value="" id="flexCheck3" checked>
+                                    <label for="flexCheck3">
+                                        SOCIETE
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="small">
+                                <div class="form-check">
+                                    <input class="checkbox align-middle" type="checkbox" value="" id="flexCheck4" checked>
+                                    <label for="flexCheck4">
+                                        TYPE
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="small">
+                                <div class="form-check">
+                                    <input class="checkbox align-middle" type="checkbox" value="" id="flexCheck5">
+                                    <label for="flexCheck5">
+                                        INITIATEUR
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="small">
+                                <div class="form-check">
+                                    <input class="checkbox align-middle" type="checkbox" value="" id="flexCheck6">
+                                    <label for="flexCheck6">
+                                        ZONE
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="small">
+                                <div class="form-check">
+                                    <input class="checkbox align-middle" type="checkbox" value="" id="flexCheck6">
+                                    <label for="flexCheck6">
+                                        NIVEAU
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="small">
+                                <div class="form-check">
+                                    <input class="checkbox align-middle" type="checkbox" value="" id="flexCheck6">
+                                    <label for="flexCheck6">
+                                        EQUIPEMENT
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="small">
+                                <div class="form-check">
+                                    <input class="checkbox align-middle" type="checkbox" value="" id="flexCheck6">
+                                    <label for="flexCheck6">
+                                        DESCRIPTION
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="small">
+                                <div class="form-check">
+                                    <input class="checkbox align-middle" type="checkbox" value="" id="flexCheck6">
+                                    <label for="flexCheck6">
+                                        CONSIGNATION
+                                    </label>
+                                </div>
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+                <img src="./img/43/Search.png" class="mr-28" />
+                <div class="ptw-btn-44">
                     <div class="d-flex" style="justify-content: center; align-items: center; height: 100%;"><img src="./img/43/Plus.png" width="20" height="20" style="margin-right: 14px;" /><div class="text-white fs-14">Add New PTW</div></div>
                 </div>
             </nav>
-            <div class="container-fluid p-0" style="margin-top: 24px;">
-                <table class="tbl-43">
+            <div style="width: 100%; margin-top: 24px;" class="scroll-adj" id="style-2">
+                <table class="tbl-43" style="min-width: 900px;">
                     <thead>
                         <tr>
                             <td><input class="checkbox" type="checkbox"></td>
@@ -74,7 +164,7 @@
                             <td class="fs-12 fw-400" style="color: #200E32;">DESCRIPTION</td>
                             <td class="fs-12 fw-400" style="color: #200E32;">CONSIGNATION</td>
                             <td class="fs-12 fw-400" style="color: #200E32;">QR CODE</td>
-                            <td><img src="./img/43/Setting.png" /></td>
+                            <td><img class="float-right" src="./img/43/Setting.png" /></td>
                         </tr>
                     </thead>
                     <tbody style="height: 550px !important;">
